--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="twitter:url" content="https://twitter.com/BazifAbdullah">
     <meta name="twitter:title" content="Growth Landing Page">
     <meta name="twitter:description" content="Main website">
-    <meta name="twitter:image" content="images/screenshot.PNG">
+    <meta name="twitter:image" content="https://iili.io/J7VZOox.png">
     <title>Growth App</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
